--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js"></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>Go Mike Designs</title>
 
     
 <!-- Analytics -->
@@ -36,10 +36,10 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.png" alt="logo, seo, google, website, internet, web design, design agency" height="40" /></a>
-					<div class="keywords" style="color:#cccccc;font-size:1px;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-
+				<a class="navbar-brand" href="index.html">
+					<img src="img/atlanta%20web%20design%20logo.png" alt="Logo for Go Mike Designs, an Atlanta based freelance web design company" height="40" />
+					<div>Atlanta's Primere Freelance Web Design</div>
+				</a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -47,12 +47,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-					</li>
-					<li>
-						<a href="page2.html">page2</a>
+						<a href="page2.html">Contact Me</a>
 					</li>
 				</ul>
 			</div>
@@ -217,13 +212,13 @@
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h2 class="text-center white large-text">
 					GoMike Designs - Web designer living and loving Atlanta.<br>
-				</p>
+				</h2>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
@@ -245,46 +240,43 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-
-					<div class="keywords" style="color:#364577;">web agency atlanta, web strategy, web design, logo, website, web, internet, logo design</div>
-
 				</div>
 					<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-4 text-white bold-text">
 						Partners
 							<ul>
-								<li><a href="car.com">car.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="myroof.com">myroof.com</a></li>
-								<li><a href="realestateseo.com">realestateseo.com</a></li>
+								<li class="text-dark-slate"><a href="car.com">car.com</a></li>
+								<li class="text-dark-slate"><a href="pizza.com">pizza.com</a></li>
+								<li class="text-dark-slate"><a href="myroof.com">myroof.com</a></li>
+								<li class="text-dark-slate"><a href="realestateseo.com">realestateseo.com</a></li>
 							</ul>		
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-4 text-white bold-text">
 						Directories 1
 						<ul>
-							<li><a href="agencydirectory.com">agencydirectory.com</a></li>
-							<li><a href="seodirectory.com">seodirectory.com</a></li>
-							<li><a href="marketingdirectory.com">marketingdirectory.com</a></li>
-							<li><a href="123seo.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="wordpressdirectory.com">wordpressdirectory.com</a></li>
-							<li><a href="agencylistatl.com">agencylistatl.com</a></li>
-							<li><a href="bestagencyatl.com">bestagencyatl.com</a></li>
-							<li><a href="seolist.com">seolist.com</a></li>
+							<li class="text-dark-slate"><a href="agencydirectory.com">agencydirectory.com</a></li>
+							<li class="text-dark-slate"><a href="seodirectory.com">seodirectory.com</a></li>
+							<li class="text-dark-slate"><a href="marketingdirectory.com">marketingdirectory.com</a></li>
+							<li class="text-dark-slate"><a href="123seo.com">123seo.com</a></li>
+							<li class="text-dark-slate"><a href="123site.com">123site.com</a></li>
+							<li class="text-dark-slate"><a href="wordpressdirectory.com">wordpressdirectory.com</a></li>
+							<li class="text-dark-slate"><a href="agencylistatl.com">agencylistatl.com</a></li>
+							<li class="text-dark-slate"><a href="bestagencyatl.com">bestagencyatl.com</a></li>
+							<li class="text-dark-slate"><a href="seolist.com">seolist.com</a></li>
 						</ul>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-4 text-white bold-text">
 						Directories 2
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="yesseo.com">yesseo.com</a></li>
-							<li><a href="seojuicelink.com">seojuicelink.com</a></li>
-							<li><a href="bestlinks.com">bestlinks.com</a></li>
-							<li><a href="linkalot.com">linkalot.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuicedirectory.com">linkjuicedirectory.com</a></li>
-							<li><a href="rankongoogle.com">rankongoogle.com</a></li>
-							<li><a href="trustedseo.com">trustedseo.com</a></li>
+							<li class="text-dark-slate"><a href="betterseo.com">betterseo.com</a></li>
+							<li class="text-dark-slate"><a href="yesseo.com">yesseo.com</a></li>
+							<li class="text-dark-slate"><a href="seojuicelink.com">seojuicelink.com</a></li>
+							<li class="text-dark-slate"><a href="bestlinks.com">bestlinks.com</a></li>
+							<li class="text-dark-slate"><a href="linkalot.com">linkalot.com</a></li>
+							<li class="text-dark-slate"><a href="backlink.com">backlink.com</a></li>
+							<li class="text-dark-slate"><a href="linkjuicedirectory.com">linkjuicedirectory.com</a></li>
+							<li class="text-dark-slate"><a href="rankongoogle.com">rankongoogle.com</a></li>
+							<li class="text-dark-slate"><a href="trustedseo.com">trustedseo.com</a></li>
 						</ul>
 					</div>
 				</div>
