--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html">
-					<img src="img/atlanta%20web%20design%20logo.webp" alt="Logo for Go Mike Designs, an Atlanta based freelance web design company" height="40" />
+					<img src="img/atlanta-web-design-logo.webp" alt="Logo for Go Mike Designs, an Atlanta based freelance web design company" height="40" />
 					<div>Atlanta's Primere Freelance Web Design</div>
 				</a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -61,7 +61,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/atlanta%20web%20designer%20mike.webp" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
+				<img src="img/atlanta-web-designer-mike.webp" class="center-block image-resize-mode" width="100" alt="atlanta web designer mike,seo, google, website, internet, web design, design agency" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					I'm Mike.
 				</h1>
