--- a/page2.html
+++ b/page2.html
@@ -93,10 +93,10 @@
 						<input id="email" class="form-control" type="email" required />
 					</div>
 					<div class="form-group">
-						<label for="input-504">
+						<label for="How-did-you-find-me?">
 							How did you find me?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" required id="How-did-you-find-me?" />
 					</div>
 					<div class="form-group">
 						<label for="message">
@@ -129,12 +129,12 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					GoMike Designs - Web designer living and loving Atlanta.<br>
+					GoMike Designs - Web designer living in and loving Atlanta.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html">Twitter<span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
