--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="keywords" content="seo, google, website, internet, web design, design agency, design agency, design agency, design agency, design agency, design agency, logo design atlanta">
     <meta name="description" content="Atlanta based, freelance web design by GoMike Designs will provide your company with a modern, professional website to help grow your customer base.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <meta name="viewport" content="viewport-fit=cover" />
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
