--- a/page2.html
+++ b/page2.html
@@ -48,6 +48,11 @@
 					<li>
 						<a href="index.html">Home</a>
 					</li>
+					<li>
+					</li>
+					<li>
+						<a href="page2.html">page2</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
@@ -57,7 +62,7 @@
 
 <!-- bloc-6 -->
 <div class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-	<div class="container bloc-sm">
+	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center hero-bloc-text tc-white">
@@ -74,7 +79,7 @@
 
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
-	<div class="container bloc-sm">
+	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
 				<form id="form_1">
