--- a/contact.html
+++ b/contact.html
@@ -126,9 +126,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h2 class="text-center white large-text">
 					GoMike Designs - Web designer living in and loving Atlanta.<br>
-				</p>
+				</h2>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
